--- a/proj-preparation/json-server/package.json
+++ b/proj-preparation/json-server/package.json
@@ -4,7 +4,7 @@
   "description": "Mock backend for Angular course",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "nodemon index"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +12,8 @@
     "express": "^4.14.1",
     "json-server": "^0.9.6",
     "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
